# qwry

./: .env.example  .gitignore  README.md  launch.bat  launch.sh  shutdown.sh
PROJECT(frontend)/v1.0/: package-lock.json  package.json
PROJECT(frontend)/v1.0/src/: App.jsx  index.css
client/: index.html  package-lock.json  package.json
client/src/: App.jsx  index.css
client/src/api/: canvas.js  chat.js  client.js  history.js  llm.js  profile.js  reader.js  search.js  workspace.js  workspaceStation.js
client/src/components/: ChatModal.jsx  InfoBoxCard.jsx  MarkdownRenderer.jsx  MediaCard.jsx  ReaderModal.jsx  SettingsPopup.jsx  TopBar.jsx
client/src/context/: CanvasView.jsx  ReaderView.jsx  SearchAssist.jsx  SummarizerView.jsx  WorkspaceView.jsx
client/src/dnd/: handlers.js
client/src/layouts/: AppLayout.jsx
client/src/panels/: ContextPanel.jsx  DiscoveryPanel.jsx  FilterSidebar.jsx  SourcesPanel.jsx  WorkspacePanel.jsx
client/src/stores/: canvasStore.js  contentStore.js  searchStore.js  sessionStore.js  uiStore.js  workspaceStationStore.js  workspaceStore.js
engine/: Cargo.toml  qwry.bat  qwry.sh  qwry.toml
engine/crawler/: Cargo.toml
engine/crawler/src/: batch_writer.rs  config.rs  crawler.rs  engine.rs  html.rs  job_queue.rs  lib.rs  main.rs  robots.rs  sharded_set.rs  types.rs
engine/crawler/src/core/: config.rs  engine.rs  mod.rs  types.rs
engine/crawler/src/parser/: html.rs  mod.rs  robots.rs
engine/crawler/src/utils/: batch_writer.rs  db_job_queue.rs  job_queue.rs  mod.rs  retry.rs  sharded_set.rs
engine/indexer/: Cargo.toml
engine/indexer/src/: index.rs  main.rs  search.rs  serve.rs
engine/indexer/src/services/: embed.rs  index.rs  mod.rs  search.rs  serve.rs  sharded.rs
engine/shared/: Cargo.toml
engine/shared/src/: lib.rs
engine/shared/tests/: full_pipeline.rs  integration.rs
infra/: docker-compose.yml
infra/searxng/: settings.yml
plan/: buildplan.md  checklist.md
server/: alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0001_create_users_table.py  0002_create_workspaces.py  0003_create_workspace_items.py  0004_add_media_url_to_items.py  0005_create_profile_tables.py  0006_add_content_to_reading_summary_and_create_overviews.py
server/src/: main.py
server/src/api/: __init__.py  crawl.py  endpoints.py  reindex.py  router.py  schemas.py  search.py  stats.py  suggest.py
server/src/core/: config.py  logging.py  registry.py  session.py
server/src/db/: __init__.py  dependencies.py  models.py  repository.py
server/src/services/: ai_response_service.py  cache.py  canvas_service.py  chat.py  engine_proxy.py  llm.py  profile_service.py  reader.py  runner.py  search_orch.py  searxng.py  stats_service.py  summarizer.py  task_service.py  workspace_service.py  workspace_station_service.py
server/test/: conftest.py  test_crawl.py  test_health.py  test_search.py  test_stats.py  test_suggest.py  test_workspace.py  test_workspace_canvas.py  test_workspace_station.py
tmp/: checklist.md
