[project]
name = "server"
version = "0.1.0"
description = "FastAPI backend for the Qwry search engine"
readme = "../docs/server.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.116.1,<1.0.0",
    "httpx>=0.28.1,<0.29.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "uvicorn[standard]>=0.35.0,<0.36.0",
]
