[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "server"
version = "0.1.0"
description = "FastAPI backend for the Qwry search engine"
readme = "../docs/server.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "alembic>=1.14",
    "asyncpg>=0.30",
    "fastapi>=0.116.1,<1.0.0",
    "httpx>=0.28.1,<0.29.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "redis>=5.0,<9.0",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.35.0,<0.36.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/server"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["test"]
