[package]
name = "crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls", "cookies", "gzip"] }
scraper = "0.18"
url = "2.5"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
shared = { path = "../shared" }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
ego-tree = "0.6"
futures = "0.3"
serde_json = "1.0"
flamegraph = "0.6.13"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres"] }
