[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
